# synacor-rs

./: Cargo.toml  README.md  spoilers.md
spec/: arch-spec
src/: argument.rs  errors.rs  instruction.rs  machine.rs  main.rs  memory.rs
synacor-game/: Cargo.toml
synacor-game/src/: location.rs  main.rs
synacor-vm/: Cargo.toml
synacor-vm/src/: argument.rs  errors.rs  instruction.rs  lib.rs  machine.rs  memory.rs
