[package]
name = "synacor-game"
version = "0.1.0"
authors = ["Adam Rodger <adam.rodger@gmail.com>"]
edition = "2018"
publish = false
default-run = "synacor-game"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
synacor-vm = { path = "../synacor-vm" }
